third_party/libwebrtc/modules/desktop_capture/desktop_capture_types.h
@@ -22,7 +22,7 @@ typedef int pid_t; // matching what used to be in
 
 namespace webrtc {
 
-enum class CaptureType { kWindow, kScreen };
+enum class CaptureType { kWindow, kScreen, kAnyScreenContent };
 
 // Type used to identify windows on the desktop. Values are platform-specific:
 //   - On Windows: HWND cast to intptr_t.
